fix: disable cursor on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -24,4 +24,5 @@ body,
   z-index: 3;
   width: 100vw;
   height: 100vh;
+  pointer-events: none;
 }
